move table (image) generation to AnsiToImg (2)

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -3,4 +3,6 @@
 cat: $(.DEFAULT_GOAL)
 	bat --theme Nord $(patsubst %.out,%.col.out,$<)
 
-ANSITOIMG_PREFIX := conda activate main &&
+CONDA_ACTIVATE=source $$(conda info --base)/etc/profile.d/conda.sh ; conda activate
+
+ANSITOIMG_PREFIX := $(CONDA_ACTIVATE) main &&
