--- a/Makefile.action
+++ b/Makefile.action
@@ -32,7 +32,7 @@ $(OUT_RUST): %.out: %.yaml ./rust/src/*
 	# strip ansi color stuff to get a plain text file
 	sed 's/\x1b\[[0-9;]*m//g' $(basename $<).col.out > $(basename $<).out
 	# colored output of the complete log (readable from the web)
-	wc -L < "$(basename $<).out"
+	LANG="en_GB.UTF-8" wc -L < "$(basename $<).out"
 	ansitoimg --width "$$(LANG="en_GB.UTF-8" wc -L < "$(basename $<).out")" -p render "$(basename $<).col.out" "$(basename $<).col.png"
 	# colored output of the most recent table
 	awk -v RS='' 'END {print NR-2}' "$(basename $<).out" \
