--- a/s01/s01.yaml
+++ b/s01/s01.yaml
@@ -35,12 +35,12 @@ setB:
 
 constraints:
   - type: !Box {num: 1, comment: "E02"}
-    check: !Lights 0
+    check: !Lights [0]
     map:
      Ivana: Mo
 
   - type: !Night {num: 1, comment: "E02"}
-    check: !Lights 1
+    check: !Lights [1]
     map:
       Luisa: Axel
       Kathi: Rene
@@ -54,12 +54,12 @@ constraints:
       Sabrina: Aleks
 
   - type: !Box {num: 2, comment: "E04"}
-    check: !Lights 0
+    check: !Lights [0]
     map:
       Melissa: Dominic
 
   - type: !Night {num: 2, comment: "E04"}
-    check: !Lights 2
+    check: !Lights [2]
     map:
       Ivana: Elisha
       Kathi: Kevin
@@ -73,12 +73,12 @@ constraints:
       Madleine: Axel
 
   - type: !Box {num: 3, comment: "E06"}
-    check: !Lights 1
+    check: !Lights [1]
     map:
       Aline: Mo
 
   - type: !Night {num: 3, comment: "E06"}
-    check: !Lights 3
+    check: !Lights [3]
     map:
       Aline: Mo
       Kathi: Kevin
@@ -92,12 +92,12 @@ constraints:
       Laura: Juliano
 
   - type: !Box {num: 4, comment: "E08"}
-    check: !Lights 1
+    check: !Lights [1]
     map:
       Melissa: Laurin
 
   - type: !Night {num: 4, comment: "E08 -- Blackout"}
-    check: !Lights 2
+    check: !Lights [2]
     map:
       Aline: Mo
       Melissa: Laurin
@@ -111,12 +111,12 @@ constraints:
       Luisa: Rene
 
   - type: !Box {num: 5, comment: "E10"}
-    check: !Lights 0
+    check: !Lights [0]
     map:
       Ivana: Elisha
 
   - type: !Night {num: 5, comment: "E10"}
-    check: !Lights 5
+    check: !Lights [5]
     map:
       Aline: Mo
       Melissa: Laurin
@@ -130,12 +130,12 @@ constraints:
       Ivana: Dominic
 
   - type: !Box {num: 6, comment: "E12"}
-    check: !Lights 1
+    check: !Lights [1]
     map:
       Michelle: Rene
 
   - type: !Night {num: 6, comment: "E12"}
-    check: !Lights 5
+    check: !Lights [5]
     map:
       Aline: Mo
       Melissa: Laurin
@@ -150,12 +150,12 @@ constraints:
       # Ferhat
 
   - type: !Box {num: 7, comment: "E14"}
-    check: !Lights 0
+    check: !Lights [0]
     map:
       Ivana: Edin
 
   - type: !Night {num: 7, comment: "E14"}
-    check: !Lights 5
+    check: !Lights [5]
     map:
       Aline: Mo
       Melissa: Laurin
@@ -170,12 +170,12 @@ constraints:
       # Edin
 
   - type: !Box {num: 8, comment: "E16"}
-    check: !Lights 0
+    check: !Lights [0]
     map:
       Sabrina: Axel
 
   - type: !Night {num: 8, comment: "E16"}
-    check: !Lights 6
+    check: !Lights [6]
     map:
       Aline: Mo
       Melissa: Laurin
@@ -190,12 +190,12 @@ constraints:
       # Elisha
 
   - type: !Box {num: 9, comment: "E18"}
-    check: !Lights 0
+    check: !Lights [0]
     map:
       Luisa: Ferhat
 
   - type: !Night {num: 9, comment: "E18"}
-    check: !Lights 7
+    check: !Lights [7]
     map:
       Aline: Mo
       Melissa: Laurin
@@ -210,12 +210,12 @@ constraints:
       # Edin
 
   - type: !Box {num: 10, comment: "E20"}
-    check: !Lights 1
+    check: !Lights [1]
     map:
       Kathi: Kevin
 
   - type: !Night {num: 10, comment: "E20"}
-    check: !Lights 10
+    check: !Lights [10]
     map:
       Aline: Mo
       Melissa: Laurin
