--- a/s02r/s02r.yaml
+++ b/s02r/s02r.yaml
@@ -33,12 +33,12 @@ setB:
 
 constraints:
   - type: !Box {num: 1, comment: "E03"}
-    check: !Lights 0
+    check: !Lights [0]
     map:
       Zoe: Martin
 
   - type: !Night {num: 1, comment: "E04"}
-    check: !Lights 3
+    check: !Lights [3]
     map:
       Anna: Micha
       Cecilia: Amadu
@@ -52,12 +52,12 @@ constraints:
       Zoe: Luca
 
   - type: !Box {num: 2, comment: "E05"}
-    check: !Lights 0
+    check: !Lights [0]
     map:
       Karina: Pharrell
 
   - type: !Night {num: 2, comment: "E06"}
-    check: !Lights 2
+    check: !Lights [2]
     map:
       Anna: Micha
       Cecilia: Pharrell
@@ -71,13 +71,13 @@ constraints:
       Zoe: Lukas
 
   - type: !Box {num: 3, comment: "E07"}
-    check: !Lights 0
+    check: !Lights [0]
     map:
       Celina: Lukas
       # Calvin: Isabelle
 
   - type: !Night {num: 3, comment: "E08"}
-    check: !Lights 3
+    check: !Lights [3]
     map:
       Anna: Martin
       Cecilia: Amadu
@@ -96,17 +96,17 @@ constraints:
   #     Amadu: Isabelle
 
   - type: !Box {num: 4.1, comment: "E09 -- Lukas will gehen"}
-    check: !Lights 1
+    check: !Lights [1]
     map:
       Luisa: Lukas
 
   - type: !Box {num: 5, comment: "E11"}
-    check: !Lights 0
+    check: !Lights [0]
     map:
       Ricarda: Felix
 
   - type: !Night {num: 4, comment: "E12"}
-    check: !Lights 3
+    check: !Lights [3]
     map:
       Anna: Pharrell
       Cecilia: Amadu
@@ -121,13 +121,13 @@ constraints:
       # Calvin
 
   - type: !Box {num: 6, comment: "E13"}
-    check: !Lights 0
+    check: !Lights [0]
     map:
       # Max: Karina
       Isabelle: Pharrell
 
   - type: !Night {num: 6, comment: "E14"}
-    check: !Lights 3
+    check: !Lights [3]
     map:
       Anna: Micha
       Cecilia: Maurice
@@ -142,13 +142,13 @@ constraints:
       # Amadu: Isabelle
 
   - type: !Box {num: 7.1, comment: "E15"}
-    check: !Lights 1
+    check: !Lights [1]
     map:
       Cecilia: Amadu
       # Gina: Fabio
 
   - type: !Night {num: 7, comment: "E16"}
-    check: !Lights 4
+    check: !Lights [4]
     map:
       Anna: Micha
       Cecilia: Amadu
@@ -163,13 +163,13 @@ constraints:
       # Ricarda: Maurice
 
   - type: !Box {num: 8, comment: "E17"}
-    check: !Lights 1
+    check: !Lights [1]
     map:
       Anna: Micha
       # Ricarda: Pharrell
 
   - type: !Night {num: 8, comment: "E18"}
-    check: !Lights 5
+    check: !Lights [5]
     map:
       Anna: Micha
       Cecilia: Amadu
@@ -184,13 +184,13 @@ constraints:
       # Max
 
   - type: !Box {num: 9, comment: "E19"}
-    check: !Lights 0
+    check: !Lights [0]
     map:
       Ricarda: Pharrell
       # Gina: Fabio
 
   - type: !Night {num: 9, comment: "E20"}
-    check: !Lights 7
+    check: !Lights [7]
     map:
       Anna: Micha
       Cecilia: Amadu
@@ -205,13 +205,13 @@ constraints:
       # Ricarda: Luca
 
   - type: !Box {num: 10, comment: "E21"}
-    check: !Lights 0
+    check: !Lights [0]
     map:
       Franzi: Max
       # Karina: Martin
 
   - type: !Night {num: 10, comment: "E21"}
-    check: !Lights 10
+    check: !Lights [10]
     map:
       Anna: Micha
       Cecilia: Amadu
