restrict when github action is run

--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -8,6 +8,14 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
+    paths:
+      - 'rust/**'
+      - '**.yaml'
+    paths-ignore:
+      - 'img/**'
+      - 'README.md'
+      - 'ghcr/**'
+
   # pull_request:
   #   branches: [ "main" ]
 
