reorganize rust code into modules (and multiple files)

--- a/rust/Makefile
+++ b/rust/Makefile
@@ -1,9 +1,12 @@
-.PHONY: all run build buildAll buildRelease run check contCheck cont
+.PHONY: all run build buildAll buildRelease run check contCheck cont test
 
 SRC_FILES = $(shell find src/ -iname "*.rs")
 
 all: run
 	
+
+test:
+	cargo test
 
 target/release/ayto: $(SRC_FILES)
 	RUSTC_WRAPPER=sccache cargo build --release
@@ -31,3 +34,8 @@ contCheck:
 
 cont:
 	luamon -l rust -e rs -w . -t -x make
+
+coverage:
+	$(RM) target/profraw/*
+	CARGO_INCREMENTAL=0 RUSTFLAGS='-Cinstrument-coverage' LLVM_PROFILE_FILE='target/profraw/cargo-test-%p-%m.profraw' cargo test
+	grcov target/profraw/ --binary-path ./target/debug/deps/ -s . -t html --branch --ignore-not-existing --ignore '../*' --ignore "/*" -o target/coverage
