remove latex stuff

--- a/Makefile.action
+++ b/Makefile.action
@@ -4,24 +4,18 @@ OUT_RUST = $(addsuffix .out, $(basename $(DAT_RUST)))
 OUT   = $(OUT_RUST)
 ALIAS = $(notdir $(OUT))
 
-.PHONY: all clean_tex clean $(patsubst %/,clean_%,$(dir $(DAT_RUST))) $(ALIAS)
+.PHONY: all clean $(patsubst %/,clean_%,$(dir $(DAT_RUST))) $(ALIAS)
 
 include Makefile.conf
 
 all: $(OUT)
 	
 
-clean: clean_tex $(patsubst %/,clean_%,$(dir $(DAT_RUST)))
+clean: $(patsubst %/,clean_%,$(dir $(DAT_RUST)))
 	
 
 $(patsubst %/,clean_%,$(dir $(DAT_RUST))): clean_%: %
 	-rm "$(<)/$(<)"*.{out,pdf,png,dot}
-
-clean_tex:
-	- rm statsMN.tex{,sort}
-	- rm statsMB.tex{,sort}
-	- rm statsInfo.tex{,sort}
-	- rm -r tex-aux
 
 $(ALIAS):
 	make $(patsubst %.out,%,$@)/$@
@@ -33,18 +27,4 @@ $(OUT_RUST): %.out: %.yaml ./rust/src/*
 	sed 's/\x1b\[[0-9;]*m//g' $(basename $<).col.out > $(basename $<).out
 	# colored output
 	./generate_png.py "$(basename $<).col.out" "$(basename $<).col.png" "$(basename $<)_tab.png"
-	# generate files to generate latex plots
-	echo "\\\\addplot table {$(basename $<)_statMN.out}; \\\\addlegendentry{$(basename $(notdir $<))}" >> "statsMN.tex"
-	echo "\\\\addplot table {$(basename $<)_statMB.out}; \\\\addlegendentry{$(basename $(notdir $<))}" >> "statsMB.tex"
-	echo "\\\\addplot table {$(basename $<)_statInfo.out}; \\\\addlegendentry{$(basename $(notdir $<))}" >> "statsInfo.tex"
 	@date
-
-stats.pdf: stats.tex statsMN.tex statsMB.tex statsInfo.tex
-	sort -u statsInfo.tex > statsInfo.tex.sort
-	sort -u statsMB.tex > statsMB.tex.sort
-	sort -u statsMN.tex > statsMN.tex.sort
-	mv statsInfo.tex.sort statsInfo.tex
-	mv statsMB.tex.sort statsMB.tex
-	mv statsMN.tex.sort statsMN.tex
-	test -d tex-aux || mkdir tex-aux
-	pdflatex "$<"
