don't transpose in action makefile

--- a/Makefile.action
+++ b/Makefile.action
@@ -35,7 +35,7 @@ $(ALIAS):
 
 $(OUT_RUST): %.out: %.yaml ./rust/src/*
 	@date
-	./rust/target/release/ayto sim --transpose -c -o $(basename $<) $< > $(basename $<).col.out
+	./rust/target/release/ayto sim -c -o $(basename $<) $< > $(basename $<).col.out
 	# strip ansi color stuff to get a plain text file
 	sed 's/\x1b\[[0-9;]*m//g' $(basename $<).col.out > $(basename $<).out
 	# colored output
